...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textResult1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/result_top_margin"
                    android:gravity="center_vertical"
                    android:textColor="#444"
                    android:textSize="35sp"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textResult2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/result_top_margin"
                    android:gravity="center_vertical"
                    android:textColor="#444"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    tools:text="15000" />

                <TextView
                    android:id="@+id/textUnit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="3dp"
                    android:textColor="#444"
...
        style="@style/ActionButton"
        android:layout_above="@id/textEndInstruction"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/result_top_margin"
        android:layout_marginBottom="10dp"
        android:text="@string/submitResult"
        android:theme="?primaryButtonStyle" />

    <org.akvo.caddisfly.widget.HtmlTextView
        android:id="@+id/textEndInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
