...
        <item>in</item>
        <item>en</item>
        <item>fr</item>
        <item>es</item>
    </string-array>

    <string name="aquagenx_link">www.aquagenx.com</string>

    <string name="number_1">1.</string>
    <string name="number_2">2.</string>
    <string name="number_3">3.</string>
    <string name="number_4">4.</string>

...

    <!--Diagnostic Mode: Messages -->
    <string name="diagnosticModeEnabled">Diagnostic mode enabled</string>
    <string name="diagnosticModeDisabled">Diagnostic mode disabled</string>

    <!--CBT-->
    <string name="mpn">MPN/100ml</string>

    <string name="delete_error">Error on file delete</string>
    <string name="test_list">Test List</string>

    <!--Software Notices-->
    <string name="lovibond_software"><a href="http://www.lovibond.com/">Lovibond Testing Instruction Visuals</a></string>
...
